--- a/prueba/.classpath
+++ b/prueba/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="books/Selenium Testing Tools Cookbook/Chapter 1/Java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/MonteScreenRecorder.jar"/>
 	<classpathentry kind="lib" path="lib/selenium-server-standalone-2.32.0.jar.OLD"/>
