--- a/prueba/.classpath
+++ b/prueba/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="books/Selenium Testing Tools Cookbook/Chapter 1/Java"/>
+	<classpathentry kind="src" path="books/Selenium Testing Tools Cookbook/Chapter 2/Java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/MonteScreenRecorder.jar"/>
 	<classpathentry kind="lib" path="lib/selenium-server-standalone-2.32.0.jar.OLD"/>
