--- a/prueba/.classpath
+++ b/prueba/.classpath
@@ -3,6 +3,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="books/Selenium Testing Tools Cookbook/Chapter 1/Java"/>
 	<classpathentry kind="src" path="books/Selenium Testing Tools Cookbook/Chapter 2/Java"/>
+	<classpathentry kind="src" path="books/Selenium Testing Tools Cookbook/Chapter 5/Java/PageObjects/src/main/java"/>
+	<classpathentry kind="src" path="books/Selenium Testing Tools Cookbook/Chapter 5/Java/PageObjects/src/main/resources"/>
+	<classpathentry kind="src" path="books/Selenium Testing Tools Cookbook/Chapter 5/Java/PageObjects/src/test/java"/>
+	<classpathentry kind="src" path="books/Selenium Testing Tools Cookbook/Chapter 5/Java/PageObjects/src/test/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/MonteScreenRecorder.jar"/>
 	<classpathentry kind="lib" path="lib/selenium-server-standalone-2.32.0.jar.OLD"/>
